--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+            <h1>Git Hub</h1>
+
     <header>
         <h1>Welcome to My Web Page</h1>
         <nav>
